--- a/UniFiler10/Views/AudioRecorderView.xaml
+++ b/UniFiler10/Views/AudioRecorderView.xaml
@@ -35,7 +35,9 @@
                 </Style>
             </StackPanel.Resources>
 
-            <Button Tapped="OnBackButton_Tapped">
+            <Button
+				Visibility="{Binding ElementName=me, Path=IsBackButtonAvailable, Converter={StaticResource BooleanToCollapsedConverter}}"
+				Tapped="OnBackButton_Tapped">
                 <Viewbox MaxHeight="60" MaxWidth="60">
                     <StackPanel Orientation="Vertical">
                         <SymbolIcon Symbol="Back"/>
